✨Add support for plugin updates
Add support for updating to the latest (GitHub) release through the WordPress dashboard by implementing Yahnis Elsts' `plugin-update-checker`.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,7 @@
       "homepage": "https://fabiancdng.com"
     }
   ],
-  "require": {}
+  "require": {
+    "yahnis-elsts/plugin-update-checker": "^5.3"
+  }
 }
